# lidar_camera_calibration

./: README.md
camera_model/: CMakeLists.txt  package.xml
camera_model/src/chessboard/: Chessboard.cc
ilcc2/: CMakeLists.txt  package.xml
ilcc2/cfg/: Locator.cfg
ilcc2/config/: 30w.yaml  back.yaml  cam_intrinsic.yaml  car_left.yaml  front.yaml  left.yaml  pointgrey.yaml  right.yaml  无标题文档
ilcc2/include/ilcc2/: CeresPnpError.h  ImageCornersEst.h  LidarCornersEst.h  Optimization.h  Visualization.h  config.h
ilcc2/launch/: calib_lidar_cam.launch  calib_lidar_cam.launch.autosave  calib_node.launch  image_corners.launch  lidar_chessboard_online.launch  lidar_corners.launch  pcd2image.launch  rgb_lidar.launch  test_lidar_cam_calib.launch
ilcc2/process_data/: car_left1.txt  car_left2.txt  car_left3.txt  car_left4.txt  car_left5.txt  car_left6.txt  car_left_lidar_1.txt  car_left_lidar_2.txt  car_left_lidar_3.txt  car_left_lidar_4.txt  car_left_lidar_5.txt  car_left_lidar_6.txt  pointgrey1.txt  pointgrey2.txt  pointgrey3.txt  pointgrey4.txt  pointgrey5.txt  pointgrey6.txt  pointgrey_lidar_1.txt  pointgrey_lidar_2.txt  pointgrey_lidar_3.txt  pointgrey_lidar_4.txt  pointgrey_lidar_5.txt  pointgrey_lidar_6.txt
ilcc2/process_data1/: front1.txt  front2.txt  front3.txt  front4.txt  front5.txt  front6.txt  front_lidar_1.txt  front_lidar_2.txt  front_lidar_3.txt  front_lidar_4.txt  front_lidar_5.txt  front_lidar_6.txt  left1.txt  left2.txt  left3.txt  left4.txt  left5.txt  left6.txt  left_lidar_1.txt  left_lidar_2.txt  left_lidar_3.txt  left_lidar_4.txt  left_lidar_5.txt  left_lidar_6.txt
ilcc2/src/: ImageCornersEst.cpp  ImageEst.cpp  ImageEst.h  LidarCornersEst.cpp  Optimization.cpp  Visualization.cpp  calib_node.cpp
ilcc2/test/: calib_lidar_cam.cpp  get_image_corners_bag.cpp  get_lidar_corners.cpp  lidar_chessboard_online.cpp  pcd2image.cpp  rgblidar.cpp  test_calib_lidar_cam.cpp
libcbdetect/: demo.m  demo_all_pic.m
libcbdetect/matching/: chessboardEnergy.m  chessboardsFromCorners.m  colorFromIndex.m  cornerCorrelationScore.m  cornerStatistics.m  createCorrelationPatch.m  findCorners.m  findModesMeanShift.m  growChessboard.m  initChessboard.m  matchChessboards.m  nonMaximumSuppression.m  observationsFromMatching.m  plotChessboardMatching.m  plotChessboards.m  refineCorners.m  scoreCorners.m  startMatching.m
